added docs for other endpoints
