# api/controllers/postController.go
@@ -96,6 +96,15 @@ func (server *Server) GetPosts(w http.ResponseWriter, r *http.Request) {
 	responses.JSON(w, http.StatusOK, posts)
 }
 
+// GetPost godoc
+// @Summary Get post By ID
+// @Description Get details of a post by ID
+// @Tags posts
+// @Param id path int true "post ID"
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} models.Post
+// @Router /api/posts/{id} [get]
 func (server *Server) GetPost(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	pid, err := strconv.ParseUint(vars["id"], 10, 64)
@@ -117,6 +126,16 @@ func (server *Server) GetPost(w http.ResponseWriter, r *http.Request) {
 	responses.JSON(w, http.StatusOK, postRetrieved)
 }
 
+// Update Post godoc
+// @Summary Update Post By ID
+// @Description Update details of a Post by ID
+// @Tags posts
+// @Param id path int true "Post ID"
+// @Param Post body models.Post true "Update Request Body"
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} models.Post
+// @Router /api/posts/{id} [put]
 func (server *Server) UpdatePost(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
@@ -195,6 +214,15 @@ func (server *Server) UpdatePost(w http.ResponseWriter, r *http.Request) {
 	responses.JSON(w, http.StatusOK, updatedPost)
 }
 
+// Delete Post godoc
+// @Summary Delete Post By ID
+// @Description Delete details of a Post by ID
+// @Tags posts
+// @Param id path int true "Post ID"
+// @Accept  json
+// @Produce  json
+// @Success 200
+// @Router /api/posts/{id} [delete]
 func (server *Server) DeletePost(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 
