# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  controllers.Login:
+  models.Login:
     properties:
       email:
         type: string
@@ -72,7 +72,7 @@ paths:
         name: login
         required: true
         schema:
-          $ref: '#/definitions/controllers.Login'
+          $ref: '#/definitions/models.Login'
       produces:
       - application/json
       responses:
@@ -134,6 +134,70 @@ paths:
       summary: Creates a new post
       tags:
       - posts
+  /api/posts/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete details of a Post by ID
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200": {}
+      summary: Delete Post By ID
+      tags:
+      - posts
+    get:
+      consumes:
+      - application/json
+      description: Get details of a post by ID
+      parameters:
+      - description: post ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Post'
+      summary: Get post By ID
+      tags:
+      - posts
+    put:
+      consumes:
+      - application/json
+      description: Update details of a Post by ID
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update Request Body
+        in: body
+        name: Post
+        required: true
+        schema:
+          $ref: '#/definitions/models.Post'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Post'
+      summary: Update Post By ID
+      tags:
+      - posts
   /api/users:
     get:
       consumes:
@@ -148,7 +212,7 @@ paths:
             items:
               $ref: '#/definitions/models.User'
             type: array
-      summary: Get details of all users
+      summary: Get all users
       tags:
       - users
     post:
@@ -188,6 +252,70 @@ paths:
           schema:
             $ref: '#/definitions/models.User'
       summary: Creates a new user
+      tags:
+      - users
+  /api/users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete details of a user by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200": {}
+      summary: Delete User By ID
+      tags:
+      - users
+    get:
+      consumes:
+      - application/json
+      description: Get details of a user by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+      summary: Get User By ID
+      tags:
+      - users
+    put:
+      consumes:
+      - application/json
+      description: Update details of a user by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update Request Body
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+      summary: Update User By ID
       tags:
       - users
 swagger: "2.0"
